Fixed the spacing in the update card heading in the project page

--- a/funnel/assets/sass/components/_list.scss
+++ b/funnel/assets/sass/components/_list.scss
@@ -67,18 +67,22 @@
 .bullet-separated-list--flex {
   padding-left: 0;
   display: flex;
-  list-style: inside;
+  list-style-type: disc;
   margin: 0;
   li {
-    padding: 0 3px;
+    padding: 0 20px 0 0;
     span.bullet-separated-list__span {
       position: relative;
       left: -7px;
     }
   }
   li:first-child {
+    margin-left: -8px;
     list-style-type: none;
     padding-left: 0;
+  }
+  li:last-child {
+    padding: 0;
   }
 }
 
@@ -86,13 +90,17 @@
   .bullet-separated-list {
     padding-left: 0;
     display: flex;
-    list-style: inside;
+    list-style-type: disc;
     li {
-      padding: 0 8px;
+      padding: 0 20px 0 0;
     }
     li:first-child {
+      margin-left: -8px;
       list-style-type: none;
       padding-left: 0;
+    }
+    li:last-child {
+      padding: 0;
     }
   }
 }
